{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 56,
  "lineage": "3143aecf-273d-41d6-5f60-a00397c3ca54",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ControlInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a9282ce3b5ddfb1",
            "arn": "arn:aws:ec2:us-east-2:058970097834:instance/i-0670ca6824dd28b61",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0670ca6824dd28b61",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "apatil-aws-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c6d78e27ff179274",
            "private_dns": "ip-10-0-0-111.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.111",
            "public_dns": "ec2-13-58-125-227.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.125.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0713191c926b0421a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0c8b6616e11f21ced"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08cf0c19a85242109",
            "tags": {
              "Name": "Control_Instance"
            },
            "tags_all": {
              "Name": "Control_Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c8b6616e11f21ced"
            ]
          },
          "dependencies": [
            "module.instances.aws_security_group.control_instance_sg",
            "module.network.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a9282ce3b5ddfb1",
            "arn": "arn:aws:ec2:us-east-2:058970097834:instance/i-069a49ed7467651aa",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-069a49ed7467651aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "apatil-aws-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0de10a6b11d0c2424",
            "private_dns": "ip-10-0-1-87.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0aa01ed2ed7db145a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-00cde2f9fd0fdf9d3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b13acd7c28fcba9",
            "tags": {
              "Name": "Worker_Node_Instance"
            },
            "tags_all": {
              "Name": "Worker_Node_Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00cde2f9fd0fdf9d3"
            ]
          },
          "dependencies": [
            "module.instances.aws_security_group.worker_nodes_sg",
            "module.network.aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a9282ce3b5ddfb1",
            "arn": "arn:aws:ec2:us-east-2:058970097834:instance/i-0f5950f8a85914b65",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f5950f8a85914b65",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "apatil-aws-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fbe154de36803722",
            "private_dns": "ip-10-0-1-211.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f29bb810afb9eb11",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-00cde2f9fd0fdf9d3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b13acd7c28fcba9",
            "tags": {
              "Name": "Worker_Node_Instance"
            },
            "tags_all": {
              "Name": "Worker_Node_Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00cde2f9fd0fdf9d3"
            ]
          },
          "dependencies": [
            "module.instances.aws_security_group.worker_nodes_sg",
            "module.network.aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058970097834:security-group/sg-0c8b6616e11f21ced",
            "description": "Security Group for Controler Instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8b6616e11f21ced",
            "ingress": [
              {
                "cidr_blocks": [
                  "174.164.7.59/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Control_Instance_SG",
            "name_prefix": "",
            "owner_id": "058970097834",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Control_Instance_SG"
            },
            "tags_all": {
              "Name": "Control_Instance_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ce44fced6aec0fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058970097834:security-group/sg-00cde2f9fd0fdf9d3",
            "description": "Worker Nodes Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00cde2f9fd0fdf9d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "174.164.7.59/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c8b6616e11f21ced"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_nodes_sg",
            "name_prefix": "",
            "owner_id": "058970097834",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Worker_Nodes_SG"
            },
            "tags_all": {
              "Name": "Worker_Nodes_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ce44fced6aec0fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instances.aws_security_group.control_instance_sg",
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bceb486f50d4e9db",
            "association_id": "eipassoc-02451df78247a5d72",
            "domain": "vpc",
            "id": "eipalloc-0bceb486f50d4e9db",
            "network_border_group": "us-east-2",
            "network_interface": "eni-06a34b0f044541da9",
            "private_dns": "ip-10-0-0-30.us-east-2.compute.internal",
            "private_ip": "10.0.0.30",
            "public_dns": "ec2-3-128-196-188.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.196.188",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Subhash_Project_Elastic_IP"
            },
            "tags_all": {
              "Name": "Subhash_Project_Elastic_IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058970097834:internet-gateway/igw-0cf90d1f6c92f2305",
            "id": "igw-0cf90d1f6c92f2305",
            "owner_id": "058970097834",
            "tags": {
              "Name": "Subhash_Project_IGW"
            },
            "tags_all": {
              "Name": "Subhash_Project_IGW"
            },
            "vpc_id": "vpc-03ce44fced6aec0fa"
          },
          "dependencies": [
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "subhash_project_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bceb486f50d4e9db",
            "association_id": "eipassoc-02451df78247a5d72",
            "connectivity_type": "public",
            "id": "nat-026338ac060e813ef",
            "network_interface_id": "eni-06a34b0f044541da9",
            "private_ip": "10.0.0.30",
            "public_ip": "3.128.196.188",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08cf0c19a85242109"
          },
          "dependencies": [
            "module.network.aws_eip.public_eip",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "NATGW_Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bd140f5f7eb09ebc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-026338ac060e813ef",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bd140f5f7eb09ebc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.public_eip",
            "module.network.aws_nat_gateway.subhash_project_nat_gw",
            "module.network.aws_route_table.PrivateRouteTable",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "PublicDefaultRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cf90d1f6c92f2305",
            "id": "r-rtb-0c123b6e1b45cb5f51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c123b6e1b45cb5f5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.project_igw",
            "module.network.aws_route_table.PublicRouteTable",
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058970097834:route-table/rtb-0bd140f5f7eb09ebc",
            "id": "rtb-0bd140f5f7eb09ebc",
            "owner_id": "058970097834",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-026338ac060e813ef",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Subhash_Project_PrivateRouteTable"
            },
            "tags_all": {
              "Name": "Subhash_Project_PrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ce44fced6aec0fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058970097834:route-table/rtb-0c123b6e1b45cb5f5",
            "id": "rtb-0c123b6e1b45cb5f5",
            "owner_id": "058970097834",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cf90d1f6c92f2305",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Subhash_Project_PublicRouteTable"
            },
            "tags_all": {
              "Name": "Subhash_Project_PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ce44fced6aec0fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateSubnetAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ebea9720008e6ca",
            "route_table_id": "rtb-0bd140f5f7eb09ebc",
            "subnet_id": "subnet-08b13acd7c28fcba9"
          },
          "dependencies": [
            "module.network.aws_route_table.PrivateRouteTable",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicSubnetAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbabcda501466060",
            "route_table_id": "rtb-0c123b6e1b45cb5f5",
            "subnet_id": "subnet-08cf0c19a85242109"
          },
          "dependencies": [
            "module.network.aws_route_table.PublicRouteTable",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058970097834:subnet/subnet-08b13acd7c28fcba9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b13acd7c28fcba9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058970097834",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subhash_Project_PrivateSubnet"
            },
            "tags_all": {
              "Name": "Subhash_Project_PrivateSubnet"
            },
            "vpc_id": "vpc-03ce44fced6aec0fa"
          },
          "dependencies": [
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058970097834:subnet/subnet-08cf0c19a85242109",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cf0c19a85242109",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058970097834",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subhash_Project_PublicSubnet"
            },
            "tags_all": {
              "Name": "Subhash_Project_PublicSubnet"
            },
            "vpc_id": "vpc-03ce44fced6aec0fa"
          },
          "dependencies": [
            "module.network.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058970097834:vpc/vpc-03ce44fced6aec0fa",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/21",
            "default_network_acl_id": "acl-0325f4558d2a813b8",
            "default_route_table_id": "rtb-06ad1734a2b947e06",
            "default_security_group_id": "sg-068e2212a9078b8e4",
            "dhcp_options_id": "dopt-4338cf28",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03ce44fced6aec0fa",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-03973d9ab9b2b8eb1",
            "ipv6_cidr_block": "2600:1f16:1edc:3a00::/56",
            "ipv6_cidr_block_network_border_group": "us-east-2",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06ad1734a2b947e06",
            "owner_id": "058970097834",
            "tags": {
              "Name": "Subhash_Project_VPC"
            },
            "tags_all": {
              "Name": "Subhash_Project_VPC"
            }
          }
        }
      ]
    }
  ]
}